# krippendorff-alpha-python

./: .gitignore  CONTRIBUTING.md  CRITICAL_FIXES.md  Dockerfile  LICENSE  PROJECT_DOCUMENTATION.md  README.md  RESEARCH_VALIDATION_ANALYSIS.md  SESSION_DOCUMENTATION_2025.md  calibrated_examples.py  comprehensive_validation.py  corrected_alpha.py  debug_alpha.py  debug_ordinal.py  debug_step_by_step.py  docker-compose.yml  heroku.yml  netlify.toml  pyproject.toml  requirements.txt  research_examples.py  setup.py  test_ordinal_fix.py  test_validation.py  vercel.json
.github/workflows/: deploy.yml  test.yml
.streamlit/: config.toml
deployment/: DEPLOYMENT.md
docs/: README.md
examples/: basic_usage.py
krippendorff_alpha/: __init__.py  core.py  utils.py  validators.py
tests/: test_core.py
web_app/: app.py  requirements.txt
